Fix packet handlers.